更新 docker-ci.yaml

--- a/.github/workflows/docker-ci.yaml
+++ b/.github/workflows/docker-ci.yaml
@@ -134,7 +134,7 @@ jobs:
         id: metadata
         uses: docker/metadata-action@v5
         with:
-          images: gpustack/gpustack
+          images: luoweb/gpustack
           tags: |
             type=ref,event=branch
             type=ref,event=pr
